--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,1 +1,47 @@
+name: Build Static LLVM
+
+on:
+  workflow_dispatch:  # 只保留手动触发
+
+jobs:
+  build:
+    runs-on: windows-latest
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Install 7zip
+      run: choco install 7zip -y
+      
+    - name: Clone LLVM
+      run: |
+        git clone https://github.com/llvm/llvm-project.git llvm-src
+        cd llvm-src
+        git checkout llvmorg-21.1.8
+        
+    - name: Configure CMake
+      run: |
+        mkdir build
+        cd build
+        cmake ../llvm-src/llvm ^
+          -G "Ninja" ^
+          -DCMAKE_BUILD_TYPE=Release ^
+          -DCMAKE_INSTALL_PREFIX=../install ^
+          -DLLVM_BUILD_STATIC=ON ^
+          -DBUILD_SHARED_LIBS=OFF ^
+          -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded
+          
+    - name: Build LLVM
+      run: |
+        cd build
+        cmake --build . --config Release --target install
+        cd ../install
+        7z a llvm-static.zip *
+        
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: llvm-static-windows
+        path: build/install/llvm-static.zip
 
