--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -39,10 +39,10 @@ jobs:
         echo "sdk_path=$sdkToolsPath\x64" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
 
     - name: Clone LLVM
-      run: |
-        git clone https://github.com/llvm/llvm-project.git llvm-src
-        cd llvm-src
-        git checkout llvmorg-21.1.8
+  run: |
+    git clone https://github.com/xfawa543/xfawa-llvm-project.git llvm-src
+    cd llvm-src
+    git checkout fix-libclang-static-windows
 
     - name: Configure CMake
       run: |
