--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -1,4 +1,4 @@
-name: Build Full Static LLVM (MSVC) 2
+name: Build Full Static LLVM (MSVC)
 
 on:
   workflow_dispatch:
@@ -38,11 +38,11 @@ jobs:
         echo "SDK Tools Path: $sdkToolsPath\x64"
         echo "sdk_path=$sdkToolsPath\x64" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
 
-    - name: Clone LLVM
-  run: |
-    git clone https://github.com/xfawa543/xfawa-llvm-project.git llvm-src
-    cd llvm-src
-    git checkout fix-libclang-static-windows
+    - name: Clone LLVM from fixed branch
+      run: |
+        git clone https://github.com/xfawa543/xfawa-llvm-project.git llvm-src
+        cd llvm-src
+        git checkout fix-libclang-static-windows
 
     - name: Configure CMake
       run: |
@@ -56,18 +56,20 @@ jobs:
         cmake ..\llvm-src\llvm -G "Ninja" `
           -DCMAKE_BUILD_TYPE=Release `
           -DCMAKE_INSTALL_PREFIX=../install `
+          -DLLVM_BUILD_STATIC=ON `
+          -DLLVM_LINK_LLVM_DYLIB=OFF `
           -DBUILD_SHARED_LIBS=OFF `
           -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded `
           -DCMAKE_C_COMPILER=cl `
           -DCMAKE_CXX_COMPILER=cl `
-          -DLLVM_BUILD_STATIC=ON `
+          -DCMAKE_EXE_LINKER_FLAGS="" `
           -DLLVM_ENABLE_PROJECTS="clang;lld" `
-          -DLLVM_BUILD_LLVM_DYLIB=OFF `
-          -DLLVM_LINK_LLVM_DYLIB=OFF `
           -DLLVM_INCLUDE_BENCHMARKS=OFF `
           -DLLVM_INCLUDE_TESTS=OFF `
           -DLLVM_ENABLE_OCAMLDOC=OFF `
-          -DLLVM_ENABLE_BINDINGS=OFF
+          -DLLVM_ENABLE_BINDINGS=OFF `
+          -DLLVM_TOOL_CLANG_BUILD=ON `
+          -DLLVM_TOOL_LLD_BUILD=ON
 
     - name: Build LLVM
       run: |
@@ -77,7 +79,7 @@ jobs:
         $env:LIB = "$msvcPath\lib\x64;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.26100.0\um\x64;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.26100.0\ucrt\x64"
         $env:INCLUDE = "$msvcPath\include;$msvcPath\atlmfc\include;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\um;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\ucrt;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\shared"
         cd build
-        cmake --build . --config Release --target install -j 4
+        cmake --build . --config Release --target install -j 2
         if (Test-Path "../install") {
             cd ../install
             7z a llvm-full-static.zip *
