--- a/.github/workflows/build32.yaml
+++ b/.github/workflows/build32.yaml
@@ -54,21 +54,10 @@ jobs:
         
         cd build
         
-        # 基于build31的成功配置，添加零依赖优化
         $cmakeArgs = @(
           "-G", "Ninja",
           "-DCMAKE_BUILD_TYPE=Release",
           "-DCMAKE_INSTALL_PREFIX=$installPath",
-          
-          # === 零依赖核心配置 ===
-          "-DLLVM_BUILD_LLVM_CXX_LIBS=ON",        # 启用LLVM C++库（关键新增）
-          "-DLLVM_ENABLE_LIBCXX=ON",              # 启用libc++（关键新增）
-          "-DLLVM_ENABLE_LIBUNWIND=ON",          # 启用栈展开（关键新增）
-          "-DLLVM_ENABLE_LIBCXXABI=ON",           # 启用C++ ABI（关键新增）
-          "-DCMAKE_CXX_FLAGS=/MT",                # 静态链接C++运行时（关键新增）
-          "-DCMAKE_C_FLAGS=/MT",                  # 静态链接C运行时（关键新增）
-          
-          # === 保持build31的成功配置 ===
           "-DLLVM_TARGETS_TO_BUILD=AArch64;AMDGPU;ARM;AVR;BPF;Hexagon;Lanai;Mips;MSP430;NVPTX;PowerPC;RISCV;Sparc;SystemZ;WebAssembly;X86",
           "-DLLVM_BUILD_STATIC=ON",
           "-DBUILD_SHARED_LIBS=OFF",
@@ -76,6 +65,10 @@ jobs:
           "-DLLVM_LINK_LLVM_DYLIB=OFF",
           "-DLLVM_ENABLE_LLVM_DYLIB=OFF",
           "-DLLVM_ENABLE_PIC=OFF",
+          "-DLLVM_BUILD_LLVM_CXX_LIBS=ON",
+          "-DLLVM_ENABLE_LIBCXX=ON",
+          "-DLLVM_ENABLE_LIBUNWIND=ON",
+          "-DLLVM_ENABLE_LIBCXXABI=ON",
           "-DLLVM_ENABLE_STATIC_ANALYSIS_TOOLS=ON",
           "-DLLVM_USE_CRT_RELEASE=MT",
           "-DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded",
@@ -98,8 +91,8 @@ jobs:
           "-DLLVM_TOOL_LLVM_DWARF_DUMP_BUILD=OFF",
           "-DLLVM_TOOL_LLVM_GO_BUILD=OFF",
           "-DLLVM_TOOL_LLVM_ISEL_FUZZER_BUILD=OFF",
-          "-DCMAKE_CXX_FLAGS=/Zc:inline /Zc:strictStrings /Zc:rvalueCast /GR- /EHa- /Oi /Oy- /bigobj /DLLVM_ENABLE_STATIC_INIT_FIX",
-          "-DCMAKE_C_FLAGS=/Zc:inline /Zc:strictStrings /Zc:rvalueCast /GR- /EHa- /Oi /Oy- /bigobj /DLLVM_ENABLE_STATIC_INIT_FIX",
+          "-DCMAKE_CXX_FLAGS=/MT /Zc:inline /Zc:strictStrings /Zc:rvalueCast /GR- /EHa- /Oi /Oy- /bigobj /DLLVM_ENABLE_STATIC_INIT_FIX",
+          "-DCMAKE_C_FLAGS=/MT /Zc:inline /Zc:strictStrings /Zc:rvalueCast /GR- /EHa- /Oi /Oy- /bigobj /DLLVM_ENABLE_STATIC_INIT_FIX",
           "-DCMAKE_EXE_LINKER_FLAGS=/OPT:REF /OPT:ICF /LTCG",
           "-DCMAKE_MODULE_LINKER_FLAGS=/OPT:REF /OPT:ICF /LTCG",
           "-DCMAKE_SHARED_LINKER_FLAGS=/OPT:REF /OPT:ICF /LTCG",
@@ -128,81 +121,15 @@ jobs:
         $env:INCLUDE = "$msvcPath\include;$msvcPath\atlmfc\include;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\um;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\ucrt;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\shared"
         
         cd build
-        
-        # 构建主项目
         cmake --build . --config Release -j 2
-        
-        # 检查并修复潜在的动态链接库
-        Write-Host "Checking for unwanted shared libraries..." -ForegroundColor Yellow
-        Get-ChildItem -Recurse -Filter "*.dll" | ForEach-Object {
-            Write-Host "Removing unwanted DLL: $($_.Name)" -ForegroundColor Red
-            Remove-Item $_.FullName -Force
-        }
-        
-        # 重新构建以确保完全静态链接
-        Write-Host "Rebuilding to ensure static linking..." -ForegroundColor Yellow
-        cmake --build . --config Release -j 2 --target clang lld
-        
-        # 安装
         ninja install
         
-        # 验证零依赖
         cd ..
         if (Test-Path "install") {
-            Write-Host "=== 零依赖验证 ===" -ForegroundColor Cyan
-            
-            # 检查关键工具
-            $tools = @("clang.exe", "clang++.exe", "lld.exe", "llvm-config.exe", "llvm-ar.exe", "llvm-objdump.exe")
-            foreach ($tool in $tools) {
-                $toolPath = "install/bin/$tool"
-                if (Test-Path $toolPath) {
-                    Write-Host "✓ $tool found" -ForegroundColor Green
-                    
-                    # 检查DLL依赖（应该是零依赖）
-                    Write-Host "  Dependencies:" -ForegroundColor Gray
-                    $deps = dumpbin /dependents $toolPath | Select-String "\.dll"
-                    if ($deps) {
-                        $deps | ForEach-Object {
-                            if ($_.Line -match "VCRUNTIME|MSVCP|api-ms-win-crt") {
-                                Write-Host "  ❌ $($_.Line)" -ForegroundColor Red
-                            } else {
-                                Write-Host "  ✅ $($_.Line)" -ForegroundColor Green
-                            }
-                        }
-                    } else {
-                        Write-Host "  ✅ No DLL dependencies" -ForegroundColor Green
-                    }
-                } else {
-                    Write-Host "✗ $tool missing" -ForegroundColor Red
-                }
-            }
-            
-            # 测试跨平台编译能力
-            Write-Host "=== 跨平台测试 ===" -ForegroundColor Cyan
-            $testCode = @"
-#include <iostream>
-int main() { std::cout << "Hello Cross-Platform!" << std::endl; return 0; }
-"@
-            $testCode | Out-File "test.cpp" -Encoding utf8
-            
-            # 测试不同目标架构
-            $targets = @("x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "arm64-apple-darwin")
-            foreach ($target in $targets) {
-                Write-Host "Testing target: $target" -ForegroundColor Yellow
-                .\install\bin\clang++.exe -target $target -c test.cpp -o "test_$target.o" 2>$null
-                if ($LASTEXITCODE -eq 0) {
-                    Write-Host "  ✓ $target supported" -ForegroundColor Green
-                } else {
-                    Write-Host "  ⚠ $target not supported" -ForegroundColor Yellow
-                }
-            }
-            
             $fileCount = (Get-ChildItem "install" -Recurse | Measure-Object).Count
-            Write-Host "Total files installed: $fileCount" -ForegroundColor Green
-            
+            Write-Host "Total files installed: $fileCount"
             if ($fileCount -gt 0) {
                 7z a llvm-zero-dependency.zip ./install/*
-                Write-Host "✓ Zero-dependency archive created" -ForegroundColor Green
             }
         }
 
@@ -211,18 +138,4 @@ int main() { std::cout << "Hello Cross-Platform!" << std::endl; return 0; }
       with:
         name: llvm-zero-dependency-windows
         path: llvm-zero-dependency.zip
-      if: always()
-
-    - name: Upload Build Logs
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-logs
-        path: build/CMakeFiles/CMakeOutput.log
-      if: always()
-
-    - name: Upload Error Logs
-      uses: actions/upload-artifact@v4
-      with:
-        name: error-logs
-        path: build/CMakeFiles/CMakeError.log
       if: always()
