--- a/.github/workflows/build_cross-38.yaml
+++ b/.github/workflows/build_cross-38.yaml
@@ -63,7 +63,7 @@ jobs:
 
     - name: Create Distribution Package
       run: |
-        cd ../.. && 7z a llvm-windows-static.zip install/*
+        cd .. && 7z a llvm-windows-static.zip install/*
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
