--- a/.github/workflows/build_cross-38.yaml
+++ b/.github/workflows/build_cross-38.yaml
@@ -31,7 +31,7 @@ jobs:
           -DCMAKE_STRIP=x86_64-w64-mingw32-strip \
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_INSTALL_PREFIX=../install \
-          -DLLVM_TARGETS_TO_BUILD=X86 \
+          -DLLVM_TARGETS_TO_BUILD=AArch64;AMDGPU;ARM;AVR;BPF;Hexagon;Lanai;Mips;MSP430;NVPTX;PowerPC;RISCV;Sparc;SystemZ;WebAssembly;X86 \
           -DLLVM_ENABLE_PROJECTS="" \
           -DLLVM_BUILD_STATIC=ON \
           -DLLVM_BUILD_LLVM_DYLIB=OFF \
