Fix CMake command in build_cross-43.yaml

--- a/.github/workflows/build_cross-43.yaml
+++ b/.github/workflows/build_cross-43.yaml
@@ -54,7 +54,8 @@ jobs:
           -DCMAKE_EXE_LINKER_FLAGS="-static" \
           -DCMAKE_MODULE_LINKER_FLAGS="-static" \
           -DCMAKE_SHARED_LINKER_FLAGS="-static" \
-          ..
+
+          cmake ..
 
     - name: Build and Install LLVM
       run: |
